--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.art-ignition.de","creator":"http://perfmonkey.com","rand":0.3230047181714326,"created_at":"2014-07-28T20:08:41.491Z"}
